# DjangoDrfTelegram

./: .gitignore  README.md  env.example  pyproject.toml  req.txt
api/: urls.py
api/serializers/: serializers_bot.py
api/views/: views_bot.py
config/: settings.py  urls.py
src/common/: admin.py  apps.py  models.py  urls.py
src/common/forms/: users_forms.py
src/common/migrations/: 0001_initial.py  0002_alter_emailverification_options.py
src/common/views/: views.py
src/telegram/: admin.py  apps.py  forms.py  message.json  models.py
src/telegram/bot_utils/: handlers.py  services.py
src/telegram/management/commands/: telegram_bot.py
src/telegram/migrations/: 0001_initial.py  0002_alter_usertg_user_tg_id.py  0003_alter_message_options.py  0004_alter_message_chat_id.py
src/users/: admin.py  apps.py  backends.py  managers.py  model_mixins.py  models.py  urls.py
src/users/migrations/: 0001_initial.py  0002_alter_user_avatar_alter_user_phone_number_and_more.py  0003_alter_user_managers_alter_user_email_and_more.py  0004_profile.py  0005_user_is_verified_alter_user_unique_together.py
src/users/serializers/api/: users.py
src/users/views/: users.py
telegramm_bot/: main.py
telegramm_bot/bot_utils/: bot_routers.py  handlers.py
templates/: baseme.html
templates/users/: email_verification.html  login.html  profile.html  registration.html
